yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcc-dev-svc
  namespace: tcc-dev
spec:
  selector:
    app: tcc-dev
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
