yamls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tcc-dev-ingress
  namespace: tcc-dev
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: aks.trinitydev
    http:
      paths:
      - path: /
        backend:
          serviceName: tcc-dev-svc
          servicePort: 80

#Add to site/default/settings.dev.php in trusthost pattern
#  'aks.trinitydev',
#  '20.212.96.252' ##public ip of application gateway
